--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="script.js" defer></script> 
     </head>
     <body>
-        
+        <div id="container">
+            <div id="display"></div>
+            <button id="githubButton">Git</button>
+            <button id="clearButton" value="clear">Clear</button>
+            <button value="/" >/</button>
+            <button value="7">7</button>
+            <button value="8">8</button>
+            <button value="8">9</button>
+            <button value="*">X</button>
+            <button value="4">4</button>
+            <button value="5">5</button>
+            <button value="6">6</button>
+            <button value="-">-</button>
+            <button value="1">1</button>
+            <button value="2">2</button>
+            <button value="3">3</button>
+            <button value="+">+</button>
+            <button value="+/-">+/-</button>
+            <button value="0">0</button>
+            <button value=".">.</button>
+            <button value="=">=</button>
+        </div>
     </body>
 </html>
