--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <body>
         <div id="container">
             <div id="display"></div>
-            <button id="githubButton">Git</button>
-            <button id="clearButton" value="clear">Clear</button>
-            <button value="/" >/</button>
-            <button value="7">7</button>
-            <button value="8">8</button>
-            <button value="8">9</button>
-            <button value="*">X</button>
-            <button value="4">4</button>
-            <button value="5">5</button>
-            <button value="6">6</button>
-            <button value="-">-</button>
-            <button value="1">1</button>
-            <button value="2">2</button>
-            <button value="3">3</button>
-            <button value="+">+</button>
-            <button value="+/-">+/-</button>
-            <button value="0">0</button>
-            <button value=".">.</button>
-            <button value="=">=</button>
+            <button id="githubButton" class="regular-buttons">Git</button>
+            <button id="clearButton" class="double-width-buttons" value="clear">Clear</button>
+            <button class="regular-buttons" value="/" >/</button>
+            <button class="regular-buttons" value="7">7</button>
+            <button class="regular-buttons" value="8">8</button>
+            <button class="regular-buttons" value="9">9</button>
+            <button class="regular-buttons" value="*">*</button>
+            <button class="regular-buttons" value="4">4</button>
+            <button class="regular-buttons" value="5">5</button>
+            <button class="regular-buttons" value="6">6</button>
+            <button class="regular-buttons" value="-">-</button>
+            <button class="regular-buttons" value="1">1</button>
+            <button class="regular-buttons" value="2">2</button>
+            <button class="regular-buttons" value="3">3</button>
+            <button class="regular-buttons" value="+">+</button>
+            <button class="regular-buttons" value="+/-">+/-</button>
+            <button class="regular-buttons" value="0">0</button>
+            <button class="regular-buttons" value=".">.</button>
+            <button class="regular-buttons" value="=">=</button>
         </div>
     </body>
 </html>
