--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
         <div id="container">
             <div id="display"></div>
-            <button id="githubButton" class="regular-buttons">Git</button>
+            <button id="githubButton" class="regular-buttons">
+                <img class="github-icon" src="images/github-logo.png">
+            </button>
             <button id="clearButton" class="double-width-buttons" value="clear">Clear</button>
             <button class="regular-buttons" value="/" >/</button>
             <button class="regular-buttons" value="7">7</button>
