--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="display"></div>
+            <div id="display">0</div>
             <button id="githubButton" class="regular-buttons">
                 <img class="github-icon" src="images/github-logo.png">
             </button>
