Add keyboard listener and operator disable toggle
- Fix issue where user could enter leading zeros without a decimal
- Add a leading zero before decimal if no number before it
- Default display is the number 0 on load and on clear
- Add ability for user to toggle operations in case of initial misclick

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <img class="github-icon" src="images/github-logo.png">
             </button>
             <button id="clearButton" class="double-width-buttons" value="clear">Clear</button>
-            <button class="regular-buttons" value="/" >/</button>
+            <button id="divideButton" class="regular-buttons" value="/" >/</button>
             <button class="regular-buttons" value="7">7</button>
             <button class="regular-buttons" value="8">8</button>
             <button class="regular-buttons" value="9">9</button>
-            <button class="regular-buttons" value="*">*</button>
+            <button id="multiplyButton" class="regular-buttons" value="*">*</button>
             <button class="regular-buttons" value="4">4</button>
             <button class="regular-buttons" value="5">5</button>
             <button class="regular-buttons" value="6">6</button>
-            <button class="regular-buttons" value="-">-</button>
+            <button id="subtractButton" class="regular-buttons" value="-">-</button>
             <button class="regular-buttons" value="1">1</button>
             <button class="regular-buttons" value="2">2</button>
             <button class="regular-buttons" value="3">3</button>
-            <button class="regular-buttons" value="+">+</button>
+            <button id="addButton" class="regular-buttons" value="+">+</button>
             <button class="regular-buttons" value="+/-">+/-</button>
             <button class="regular-buttons" value="0">0</button>
             <button class="regular-buttons" value=".">.</button>
